// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: const > data-contracts 1`] = `
"/* eslint-disable */
/* tslint:disable */

export interface PetDC {
  id?: number;
  kind?: PetKindDC;
  name: string;
  status: PetStatusDC;
}

export const PetKindDC = {
  Cat: 0,
  Dog: 1,
  Bird: 2,
} as const;
export type PetKindDC = (typeof PetKindDC)[keyof typeof PetKindDC];

export const PetStatusDC = {
  Available: "available",
  Pending: "pending",
  Sold: "sold",
} as const;
export type PetStatusDC = (typeof PetStatusDC)[keyof typeof PetStatusDC];

/**
 * Fixture field.
 */
export const SchBustlingTypeface38DC = {
  Ev0: "ev0",
  Ev1: "ev1",
  Ev2: "ev2",
  Ev3: "ev3",
  Ev4: "ev4",
  Ev5: "ev5",
  Ev6: "ev6",
} as const;
export type SchBustlingTypeface38DC =
  (typeof SchBustlingTypeface38DC)[keyof typeof SchBustlingTypeface38DC];
"
`;

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: const > endpoint 1`] = `
"/* eslint-disable */
/* tslint:disable */
import { Endpoint, HttpResponse, RequestParams } from "mobx-tanstack-query-api";
import { http, queryClient } from "mobx-tanstack-query-api/builtin";
import { Group, Tag } from "../../meta-info";
import { PetDC, PetStatusDC, SchBustlingTypeface38DC } from "../../data-contracts";
export type ListPetsErrorDC = any;

export type ListPetsDataDC = PetDC[];

export type ListPetsParams = {
  query?: {
    /** Fixture field. */
    fixture?: SchBustlingTypeface38DC;
    status?: PetStatusDC;
  };
  requestParams?: RequestParams;
};

/**
 * No description
 * @operationId listPets
 * @tags pets
 * @request **GET:/pets**
 * @produces application/json
 * @responses
 * @**200** ListPetsDataDC OK
 */
export const listPets = new Endpoint<
  HttpResponse<ListPetsDataDC, ListPetsErrorDC>,
  ListPetsParams,
  any
>(
  {
    params: ({ query, requestParams }) => ({
      path: \`/pets\`,
      method: "GET",
      query: query,
      format: "json",
      ...requestParams,
    }),
    requiredParams: [],
    operationId: "listPets",
    path: ["pets"],
    tags: [Tag.Pets],
    group: Group.Pets,
    meta: {},
  },
  queryClient,
  http,
);
"
`;

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: const > meta-info 1`] = `
"/* eslint-disable */
/* tslint:disable */
export const Group = {
  Pets: "pets",
} as const;
export type Group = (typeof Group)[keyof typeof Group];
export const Tag = {
  Pets: "pets",
} as const;
export type Tag = (typeof Tag)[keyof typeof Tag];
"
`;

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: enum > data-contracts 1`] = `
"/* eslint-disable */
/* tslint:disable */

export interface PetDC {
  id?: number;
  kind?: PetKindDC;
  name: string;
  status: PetStatusDC;
}

export enum PetKindDC {
  Cat = 0,
  Dog = 1,
  Bird = 2,
}

export enum PetStatusDC {
  Available = "available",
  Pending = "pending",
  Sold = "sold",
}

/**
 * Fixture field.
 */
export enum SchBustlingTypeface38DC {
  Ev0 = "ev0",
  Ev1 = "ev1",
  Ev2 = "ev2",
  Ev3 = "ev3",
  Ev4 = "ev4",
  Ev5 = "ev5",
  Ev6 = "ev6",
}
"
`;

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: enum > endpoint 1`] = `
"/* eslint-disable */
/* tslint:disable */
import { Endpoint, HttpResponse, RequestParams } from "mobx-tanstack-query-api";
import { http, queryClient } from "mobx-tanstack-query-api/builtin";
import { Group, Tag } from "../../meta-info";
import { PetDC, PetStatusDC, SchBustlingTypeface38DC } from "../../data-contracts";
export type ListPetsErrorDC = any;

export type ListPetsDataDC = PetDC[];

export type ListPetsParams = {
  query?: {
    /** Fixture field. */
    fixture?: SchBustlingTypeface38DC;
    status?: PetStatusDC;
  };
  requestParams?: RequestParams;
};

/**
 * No description
 * @operationId listPets
 * @tags pets
 * @request **GET:/pets**
 * @produces application/json
 * @responses
 * @**200** ListPetsDataDC OK
 */
export const listPets = new Endpoint<
  HttpResponse<ListPetsDataDC, ListPetsErrorDC>,
  ListPetsParams,
  any
>(
  {
    params: ({ query, requestParams }) => ({
      path: \`/pets\`,
      method: "GET",
      query: query,
      format: "json",
      ...requestParams,
    }),
    requiredParams: [],
    operationId: "listPets",
    path: ["pets"],
    tags: [Tag.Pets],
    group: Group.Pets,
    meta: {},
  },
  queryClient,
  http,
);
"
`;

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: enum > meta-info 1`] = `
"/* eslint-disable */
/* tslint:disable */
export const enum Group {
  Pets = "pets",
}
export const enum Tag {
  /** pets */
  Pets = "pets",
}
"
`;

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: union > data-contracts 1`] = `
"/* eslint-disable */
/* tslint:disable */

export interface PetDC {
  id?: number;
  kind?: PetKindDC;
  name: string;
  status: PetStatusDC;
}

export type PetKindDC = 0 | 1 | 2;

export type PetStatusDC = "available" | "pending" | "sold";

/**
 * Fixture field.
 */
export type SchBustlingTypeface38DC =
  | "ev0"
  | "ev1"
  | "ev2"
  | "ev3"
  | "ev4"
  | "ev5"
  | "ev6";
"
`;

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: union > endpoint 1`] = `
"/* eslint-disable */
/* tslint:disable */
import { Endpoint, HttpResponse, RequestParams } from "mobx-tanstack-query-api";
import { http, queryClient } from "mobx-tanstack-query-api/builtin";
import { PetDC, PetStatusDC, SchBustlingTypeface38DC } from "../../data-contracts";
export type ListPetsErrorDC = any;

export type ListPetsDataDC = PetDC[];

export type ListPetsParams = {
  query?: {
    /** Fixture field. */
    fixture?: SchBustlingTypeface38DC;
    status?: PetStatusDC;
  };
  requestParams?: RequestParams;
};

/**
 * No description
 * @operationId listPets
 * @tags pets
 * @request **GET:/pets**
 * @produces application/json
 * @responses
 * @**200** ListPetsDataDC OK
 */
export const listPets = new Endpoint<
  HttpResponse<ListPetsDataDC, ListPetsErrorDC>,
  ListPetsParams,
  any
>(
  {
    params: ({ query, requestParams }) => ({
      path: \`/pets\`,
      method: "GET",
      query: query,
      format: "json",
      ...requestParams,
    }),
    requiredParams: [],
    operationId: "listPets",
    path: ["pets"],
    tags: ["pets"],
    group: "pets",
    meta: {},
  },
  queryClient,
  http,
);
"
`;

exports[`generateApi snapshot enumStyle > generates data-contracts with enumStyle: union > meta-info 1`] = `
"/* eslint-disable */
/* tslint:disable */
export type Group = "pets";
export type Tag = "pets";
"
`;
